--- a/Backend/ZooTrack/ZooTrack.Client/_Imports.razor
+++ b/Backend/ZooTrack/ZooTrack.Client/_Imports.razor
@@ -7,4 +7,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using ZooTrack.Client
-@using ZooTrack.Client.Layout
+@using ZooTrack.Client.Shared
+@using ZooTrack.Client.Services
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
